wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-homolog-service
  labels:
    name: wiki-homolog-service
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: wiki-homolog
